Image now fits in presentation

--- a/Docs/Sprint0/Presentation/src/main.tex
+++ b/Docs/Sprint0/Presentation/src/main.tex
@@ -3,15 +3,16 @@
 \title{Sprint 0}
 \institute{COMP 4350}
 \date{Sept, 2024}
-
+\author{Team 6}
 \begin{document}
+
 \frame{\titlepage}
 
-\begin{frame}{Concierge}
-\begin{figure}
-    \centering
-    %Finalized logo will go here
-\end{figure}
+\begin{frame}
+    \begin{figure}
+        \centering
+        \includegraphics[width=1\linewidth]{images/logo.png}
+    \end{figure}
 \end{frame}
 \begin{frame}{What is Concierge?}
 
@@ -38,14 +39,19 @@
         \item Database: MongoDB
         \item Back end: Collection of web servers written in C\# and Python orchestrated by Kubernetes
         \item Front End 1: TypeScript + Angular
-        \item Front End 2: Vue.js + JavaScript
+        \item Front End 2: React + JavaScript
     \end{itemize}
 \end{frame}
 
 \beamerdefaultoverlayspecification{<*>}
 
 \begin{frame}{How are you going to do it?}
-    %Diagram will go here
+    \begin{figure}
+        \centering
+        \includegraphics[width=0.7\linewidth]{images/Diagram.png}
+    \end{figure}
 \end{frame}
+
+
 
 \end{document}
