Add ending slide to presentation

--- a/Docs/Sprint0/Presentation/src/main.tex
+++ b/Docs/Sprint0/Presentation/src/main.tex
@@ -42,6 +42,12 @@
     \end{figure}
 \end{frame}
 
+\begin{frame}
+    \begin{figure}
+        \centering
+        \includegraphics[width=1\linewidth]{images/logo.png}
+    \end{figure}
+\end{frame}
 
 
 \end{document}
